src/yini_test/cases/golden/strict/valid/keys/backticked-key-basic.strict.yini
@yini strict

^ Keys
`Description of Project` = "val"
enabled = true

/END
