src/yini_test/cases/golden/strict/invalid/keys/key-starts-with-digit.strict.yini
@yini strict

^ Keys
1key = "val"

/END
